# AI-Agent-for-finance

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docs.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run.py
alembic/: env.py
app/: __init__.py
app/api/: __init__.py  main.py  schemas.py
app/api/routes/: goals.py  health.py  history.py  stats.py
app/core/: __init__.py  agent.py  executor.py  llm_provider.py  memory.py  models.py  planner.py  react_agent.py  react_agent_direct.py
app/database/: crud.py  database.py  models.py
app/mcp/: __init__.py  server_manager.py
app/mcp/client/: __init__.py  mcp_client.py  tool_adapter.py
app/mcp/server/: __init__.py  base.py  stdio_server.py
app/mcp/servers/: __init__.py  api_client_server.py  browser_server.py  calculator_server.py  code_executor_server.py  file_ops_server.py  stock_analysis_server.py  unified_server.py  (+5 more)
app/tools/: __init__.py  api_client.py  base.py  calculator.py  code_executor.py  file_ops.py  registry.py  stock_analysis.py  stock_calculator.py  stock_market.py  visualizer.py  weather.py  web_search.py
app/utils/: config.py  logger.py
file_workspace/: mcp_test_file.json  test.csv  test.json
static/: app.js  chat.css  chat.html  chat.js  execution.html  history.html  index.html  stats.html  style.css  test_plotly.html
tests/: README.md  test_api_client.py  test_base_and_registry.py  test_basic.py  test_calculator.py  test_code_executor.py  test_file_ops.py  test_stock_calculator.py  test_stock_market.py  test_visualizer.py  test_web_search.py
