[project]
name = "autonomous-ai-agent"
version = "0.1.0"
description = "Autonomous AI Agent System with Task Planning and Execution"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

